2007-06-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* bin/gluon_setup.rb, lib/gluon/setup.rb: setup tool.
	`run' directory of initial application skeleton.

	* gluon.rb: project start.
