@@ -1,7 +1,7 @@
 # gluon configuration
 
 port 9202
-access_log 'access.log'
+access_log '@?/access.log'
 
 require 'Welcom'
 mount Welcom, '/'
